[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/pp/player_face-sheet.png" type="Texture" id=1]
[ext_resource path="res://source/actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/health_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/pp/player_back-sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/items/shotgun.png" type="Texture" id=5]
[ext_resource path="res://assets/pp/player_idle-sheet.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 47.5, 81 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk_down",
"speed": 8.0
}, {
"frames": [  ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walk_up",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.6667, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 80, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 80, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 80, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 80, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 80, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 6 ), SubResource( 5 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=20]
resource_name = "idle"
length = 0.5

[sub_resource type="Animation" id=9]
resource_name = "walk_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=21]
resource_name = "walk_left"

[sub_resource type="Animation" id=22]
resource_name = "walk_right"

[sub_resource type="Animation" id=10]
resource_name = "walk_up"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_up" ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
z_index = 1
script = ExtResource( 2 )
shot_type = "electric"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.5, 2 )
shape = SubResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 19 )
animation = "idle"
frame = 1
playing = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Camera2D" type="Camera2D" parent="." groups=["camera"]]
current = true
limit_left = 0
limit_top = 0

[node name="Hurtbox" type="Area2D" parent="."]

[node name="Hurtbox" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 6, 0.999998 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Health" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 148, 37 )
scale = Vector2( 3, 3 )
frames = SubResource( 8 )
frame = 4

[node name="EggCount" type="Label" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 92.0
margin_right = 119.0
margin_bottom = 106.0
rect_scale = Vector2( 3, 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk_down"
anims/idle = SubResource( 20 )
anims/walk_down = SubResource( 9 )
anims/walk_left = SubResource( 21 )
anims/walk_right = SubResource( 22 )
anims/walk_up = SubResource( 10 )

[node name="Weapon" type="Sprite" parent="."]
position = Vector2( -52, 35 )
rotation = -6.28319
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="shoot" type="Position2D" parent="Weapon"]
position = Vector2( 20.75, -3.25 )
scale = Vector2( 0.25, 0.25 )

[connection signal="timeout" from="DodgeTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
